# nerdterm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: app.rs  events.rs  main.rs
src/config/: address_book.rs  capture.rs  known_hosts.rs  mod.rs  settings.rs
src/network/: mod.rs  ssh.rs  telnet.rs
src/terminal/: ansi_query.rs  emulator.rs  mod.rs
src/ui/: address_book.rs  mod.rs  popup.rs  terminal_view.rs
