[package]
name = "nerdterm"
version = "0.1.1"
edition = "2024"
description = "A TUI client for BBS, MUD, and SSH connections"
license = "MIT"
repository = "https://github.com/damonLL/nerdterm"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
vt100 = "0.16"
tui-term = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
russh = { version = "0.57", features = ["aws-lc-rs"] }
log = "0.4"
anyhow = "1"
futures = "0.3"
zeroize = "1"
